ABBREVIATIONS:
-----------------------------------------------------
CED - (C)ompact (E)ncoding (D)etection (by Google)
MUI - (M)ultilingual (U)ser (I)nterface
NLS - (N)ew (L)anguage (S)trings (need for translation)
ONI - (ONI)guruma Regex engine
SCI - (SCI)ntilla Library
UCD - (UCD)ARDET is an Encoding Detector Library


=====================================================
Current BETA Version 5.20.208.(build_#) (2020-02-08)
=====================================================

-----------------------------------------------------
NEW:
-----------------------------------------------------
- Infos of sreen/display for "Copy Version Info" button.
- Preserve stream selection in file history (w/ text position remembering).
- Language dependent status bar abreviations.
- Copy directory to clipboard and Open path in explorer.
- Toggle menu bar option.
- Add Lexicographical Line Sort Order.
- CSV Prism Color Lexer.
- Preserve File Modification Date/Time: Option stays until new Session is loaded.
- Save with Original File Date/Time - Ctrl+Alt+F6.

-----------------------------------------------------
CHANGES:
-----------------------------------------------------
- Accelerator key remapping: move line up/down vs. jump folds.
- Separate auto esc'd control chars from "transform backslashes" switch in find/replace dialog.
- Increase encoding detection confidence threshold to 92%.
- Finetuning of Single Byte Char Set (SBCS) detection.
- Add current Encoding and Lexer to "Copy Version Text".
- Lexer keyword initializer list simplified.
- Find/Replace dialog: in case of "transform backslashes" do Esc control seqs.
- Remove "extra" drag n' drop handler.
- Upper confidence level for UCHARDET to: "AnalyzeReliableConfidenceLevel=70".
- UCHARDET: Confidence calculation for Single Byte Character Set (SBCS).
- Replace "save modified file warning" by (silent) custom messagebox if message beeps are muted.
- Don't Auto-Close blank untitled document, only empty untitled document.