@@ -3,8 +3,8 @@
   <assemblyIdentity
     name="Notepad3"
     processorArchitecture="*"
-    version="5.20.210.1"
+    version="5.20.210.3195"
     type="win32"
   />
-  <description>Notepad3 BETA</description>
+  <description>Notepad3 RC1</description>
 </assembly>
