@@ -9,11 +9,11 @@
 #define VERSION_MAJOR 5
 #define VERSION_MINOR 20
 #define VERSION_REV 210
-#define VERSION_BUILD 1
+#define VERSION_BUILD 3195
 #define SCINTILLA_VER 430
 #define ONIGURUMA_REGEX_VER 6.9.4
 #define UCHARDET_VER 2018.09.27
 #define TINYEXPR_VER 2018.05.11
 #define UTHASH_VER 2.1.0
-#define VERSION_PATCH BETA
-#define VERSION_COMMIT_ID local
+#define VERSION_PATCH RC1
+#define VERSION_COMMIT_ID DKT1-AMR
